# niri

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Configuration:-Input.html  Configuration:-Layout.html  Configuration:-Window-Rules.html  Getting-Started.html  README.md  Window-Effects.html  build.rs  flake.nix  layer_shell_animations.spec.md  opencode.json  sitemap.xml  test-conf.kdl
.planning/: ARCHITECTURE_ANALYSIS.md  LAYER_OPEN_CLOSE_REFACTOR_SPEC.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  COVERAGE.md  PATTERNS.md  STACK.md
.planning/debug/: layer-anim-double-run.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: Virtual-Outputs.md  mkdocs.yaml
docs/wiki/: Application-Issues.md  Configuration:-Animations.md  Configuration:-Azerty.md  Configuration:-Debug-Options.md  Configuration:-Gestures.md  Configuration:-Include.md  Configuration:-Input.md  Configuration:-Introduction.md  Configuration:-Key-Bindings.md  Configuration:-Layer-Rules.md  Configuration:-Layout.md  Configuration:-Miscellaneous.md  Configuration:-Outputs.md  Configuration:-Recent-Windows.md  Configuration:-Switch-Events.md  Configuration:-Window-Rules.md  Configuration:-Zoom.md  Design:-Gesture-IPC-Refactor.md  Design:-Touchscreen-Gestures.md  Development:-Design-Principles.md  FAQ.md  Gestures.md  Integrating-niri.md  Nvidia.md  Overview.md  Screencasting.md  Security-Model.md  Tabs.md  Window-Effects.md  Workspaces.md  _Sidebar.md
docs/wiki/examples/: screen_transition_custom_shader.frag
niri-config/: AGENTS.md  Cargo.toml
niri-config/src/: .lib.rs.pending-snap  animations.rs  appearance.rs  binds.rs  debug.rs  error.rs  gestures.rs  global_shortcuts.rs  input.rs  layer_rule.rs  layout.rs  lib.rs  misc.rs  output.rs  recent_windows.rs  touch_binds.rs  utils.rs  window_rule.rs  workspace.rs
niri-config/tests/: wiki-parses.rs
niri-ipc/: AGENTS.md  Cargo.toml
niri-ipc/src/: lib.rs  state.rs
niri-visual-tests/: AGENTS.md  Cargo.toml
niri-visual-tests/src/: main.rs  smithay_view.rs  test_window.rs
niri-visual-tests/src/cases/: gradient_angle.rs  gradient_area.rs  gradient_oklab.rs  gradient_oklab_alpha.rs  gradient_oklch_alpha.rs  gradient_oklch_decreasing.rs  gradient_oklch_increasing.rs  gradient_oklch_longer.rs  gradient_oklch_shorter.rs  gradient_srgb.rs  gradient_srgb_alpha.rs  gradient_srgblinear.rs  gradient_srgblinear_alpha.rs  layout.rs  tile.rs  window.rs
proptest-regressions/utils/: region.txt
resources/: default-config.kdl  niri-session
search/: search_index.json
src/: a11y.rs  cli.rs  cursor.rs  cursor_scale.rs  lib.rs  main.rs  niri.rs  remote_desktop.rs  zoom.rs
src/animation/: AGENTS.md  mod.rs  spring.rs
src/backend/: AGENTS.md  headless.rs  mod.rs  tty.rs  winit.rs
src/dbus/: AGENTS.md  freedesktop_a11y.rs  freedesktop_screensaver.rs  gnome_settings_shortcuts.rs  gnome_shell.rs  mod.rs  mutter_display_config.rs  mutter_remote_desktop.rs  mutter_screen_cast.rs  net_hadess_sensorproxy.rs
src/handlers/: AGENTS.md  background_effect.rs  compositor.rs  dmabuf_readiness.rs  layer_shell.rs  mod.rs  xdg_shell.rs
src/input/: AGENTS.md  backend_ext.rs  dbus_remote_desktop_backend.rs  eis_backend.rs  mod.rs  move_grab.rs  pick_color_grab.rs  pick_window_grab.rs  resize_grab.rs  spatial_movement_grab.rs  swipe_tracker.rs  touch_gesture.rs  touch_overview_grab.rs  touch_resize_grab.rs
src/ipc/: AGENTS.md  client.rs  server.rs
src/layer/: AGENTS.md  closing_layer.rs  layer_animation.rs  mapped.rs  mod.rs  opening_layer.rs
src/layout/: AGENTS.md  closing_window.rs  floating.rs  focus_ring.rs  insert_hint_element.rs  mod.rs  monitor.rs  opening_window.rs  scrolling.rs  shadow.rs  tab_indicator.rs  tests.rs  tile.rs  workspace.rs  zoom.rs
src/layout/tests/: animations.rs  fullscreen.rs  zoom.rs
src/protocols/: AGENTS.md  ext_hotkey.rs  ext_workspace.rs  foreign_toplevel.rs  gamma_control.rs  mod.rs  output_management.rs  output_power_management.rs  raw.rs  screencopy.rs  toplevel_image_capture_source.rs  vicinae_hotkey.rs  virtual_keyboard.rs
src/render_helpers/: AGENTS.md  background_effect.rs  blur.rs  border.rs  clipped_surface.rs  color_filter.rs  damage.rs  debug.rs  effect_buffer.rs  framebuffer_effect.rs  masked_offscreen.rs  memory.rs  mod.rs  offscreen.rs  render_elements.rs  resize.rs  resources.rs  shader_element.rs  shadow.rs  snapshot.rs  solid_color.rs  surface.rs  xray.rs  zoom.rs
src/render_helpers/shaders/: border.frag  clipped_surface.frag  color_filter_epilogue.frag  color_filter_prelude.frag  mod.rs  postprocess.frag  resize_epilogue.frag  resize_prelude.frag  rounding_alpha.frag  rounding_alpha_superellipse.frag  screen_transition_epilogue.frag  screen_transition_prelude.frag  shadow.frag
src/screencasting/: AGENTS.md  mod.rs  pw_utils.rs
src/tests/: AGENTS.md  animations.rs  client.rs  fixture.rs  floating.rs  mod.rs  output_power.rs  output_power_protocol.rs  server.rs  zoom.rs
src/ui/: AGENTS.md  app_icons.rs  config_error_notification.rs  exit_confirm_dialog.rs  hotkey_overlay.rs  mod.rs  mru.rs  screen_transition.rs  screenshot_ui.rs  spawn_overlay.rs
src/ui/mru/: tests.rs
src/utils/: AGENTS.md  mod.rs  spawning.rs  transaction.rs  watcher.rs  zoom.rs
src/utils/xwayland/: mod.rs  satellite.rs
src/window/: AGENTS.md  mapped.rs  mod.rs  unmapped.rs
