[workspace]
members = ["niri-config", "niri-ipc", "niri-visual-tests"]

[workspace.package]
version = "26.4.0"
description = "A scrollable-tiling Wayland compositor"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
repository = "https://github.com/niri-wm/niri"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0"
bitflags = "2.13"
clap = { version = "4.6", features = ["derive"] }
insta = "1.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = [
  "max_level_trace",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracy-client = { version = "0.18", default-features = false }

[workspace.dependencies.smithay]
# version = "0.4.1"
git = "https://github.com/Smithay/smithay.git"
rev = "ff5fa7df392cecfba049ffed55cdaa4e98a8e7ef"
default-features = false

[workspace.dependencies.smithay-drm-extras]
# version = "0.1.0"
git = "https://github.com/Smithay/smithay.git"
rev = "ff5fa7df392cecfba049ffed55cdaa4e98a8e7ef"
# path = "../smithay/smithay-drm-extras"

[package]
name = "niri"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

readme = "README.md"
keywords = ["wayland", "compositor", "tiling", "smithay", "wm"]

[dependencies]
# accesskit_unix 0.18 regressed screen reader support (niri-wm/niri#3594, AccessKit/accesskit-c#76).
# Root cause: 0.18 switched to activating only when a screen reader is detected, using the wrong
# D-Bus property (ScreenReaderEnabled). Fix landed in accesskit_unix main (PR #715, commit e7299a7)
# switching to IsEnabled; expected in 0.21.2, not yet published on crates.io (as of 2026-06-06).
# When 0.21.2 ships: bump both to accesskit="0.24" + accesskit_unix="0.21", and adapt to
# `tree_id: TreeId::ROOT` in src/a11y.rs (TreeUpdate gained that field in accesskit 0.22+).
accesskit = { version = "0.21", optional = true }
accesskit_unix = { version = "0.17", optional = true }
anyhow.workspace = true
arrayvec = "0.7"
async-channel = "2.5"
async-io = { version = "2.6", optional = true }
atomic = "0.6"
bitflags.workspace = true
bytemuck = { version = "1.25", features = ["derive"] }
calloop = { version = "0.14", features = ["executor", "futures-io", "signals"] }
clap = { workspace = true, features = ["string"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
directories = "6.0"
drm-ffi = "0.9"
fastrand = "2.4"
futures-util = { version = "0.3", default-features = false, features = [
  "std",
  "io",
] }
git-version = "0.3"
glam = "0.33"
input = { version = "0.10", features = ["libinput_1_21"] }
keyframe = { version = "1.1", default-features = false }
libc = "0.2"
libdisplay-info = "0.3"
# log = { version = "0.4", features = [
#   "max_level_trace",
#  "release_max_level_debug",
# ] } unused dep
niri-config = { version = "26.4.0", path = "niri-config" }
niri-ipc = { version = "26.4.0", path = "niri-ipc", features = ["clap"] }
ordered-float = "5.3"
pango = { version = "0.22", features = ["v1_44"] }
pangocairo = "0.22"
pipewire = { version = "0.10", optional = true, features = ["v0_3_33"] }
png = "0.18"
# profiling = "1.0"
sd-notify = "0.5"
serde.workspace = true
serde_json.workspace = true
smithay-drm-extras.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracy-client.workspace = true
wayland-backend = "0.3"
wayland-scanner = "0.31"
wayland-server = "0.31"
xcursor = "0.3"
zbus = { version = "5.16", optional = true }

[dependencies.smithay]
workspace = true
features = [
  "backend_drm",
  "backend_egl",
  "backend_gbm",
  "backend_libinput",
  "backend_session_libseat",
  "backend_udev",
  "backend_winit",
  "desktop",
  "renderer_gl",
  "renderer_pixman",
  "renderer_multi",
  "use_system_lib",
  "wayland_frontend",
]

[dev-dependencies]
approx = "0.5"
calloop-wayland-source = "0.4"
insta.workspace = true
proptest = "1.11"
proptest-derive = { version = "0.8", features = ["boxed_union"] }
rayon = "1.12"
wayland-client = "0.31"
xshell = "0.2"

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["dbus", "systemd", "xdp-gnome-screencast"]
# Enables D-Bus support (serve various freedesktop and GNOME interfaces, accessibility tree, power button handling).
dbus = ["dep:zbus", "dep:async-io", "dep:accesskit", "dep:accesskit_unix"]
# Enables systemd integration (global environment, apps in transient scopes).
systemd = ["dbus"]
# Enables screencasting support through xdg-desktop-portal-gnome.
xdp-gnome-screencast = ["dbus", "pipewire"]
# Enables the Tracy profiler instrumentation.
profile-with-tracy = [
  # "profiling/profile-with-tracy",
  "tracy-client/default",
  "smithay/tracy_gpu_profiling",
]
# Enables the on-demand Tracy profiler instrumentation.
profile-with-tracy-ondemand = [
  "profile-with-tracy",
  "tracy-client/ondemand",
  "tracy-client/manual-lifetime",
]
# Enables Tracy allocation profiling.
profile-with-tracy-allocations = ["profile-with-tracy"]
# Enables dinit integration (global environment).
dinit = []

[lints.clippy]
new_without_default = "allow"
collapsible_match = "allow"

[profile.release]
debug = "line-tables-only"
overflow-checks = true
lto = "thin"

[profile.release.package.niri-config]
# knuffel with chomsky generates a metric ton of debuginfo.
debug = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[package.metadata.generate-rpm]
version = "26.04"
assets = [
  { source = "target/release/niri", dest = "/usr/bin/", mode = "755" },
  { source = "resources/niri-session", dest = "/usr/bin/", mode = "755" },
  { source = "resources/niri.desktop", dest = "/usr/share/wayland-sessions/", mode = "644" },
  { source = "resources/niri-portals.conf", dest = "/usr/share/xdg-desktop-portal/", mode = "644" },
  { source = "resources/niri.service", dest = "/usr/lib/systemd/user/", mode = "644" },
  { source = "resources/niri-shutdown.target", dest = "/usr/lib/systemd/user/", mode = "644" },
]
[package.metadata.generate-rpm.requires]
alacritty = "*"
fuzzel = "*"

[package.metadata.deb]
depends = "alacritty, fuzzel"
assets = [
  [
    "target/release/niri",
    "usr/bin/",
    "755",
  ],
  [
    "resources/niri-session",
    "usr/bin/",
    "755",
  ],
  [
    "resources/niri.desktop",
    "/usr/share/wayland-sessions/",
    "644",
  ],
  [
    "resources/niri-portals.conf",
    "/usr/share/xdg-desktop-portal/",
    "644",
  ],
  [
    "resources/niri.service",
    "/usr/lib/systemd/user/",
    "644",
  ],
  [
    "resources/niri-shutdown.target",
    "/usr/lib/systemd/user/",
    "644",
  ],
]
