[package]
name = "niri-config"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
csscolorparser = "0.8"
knuffel = "3.2"
miette = { version = "5.10.0", features = [
  "fancy-no-backtrace",
] } # has to stay "5.10.0" because knuffel requires 5.x
niri-ipc = { version = "26.4.0", path = "../niri-ipc" }
regex = "1.12"
smithay = { workspace = true, features = ["backend_libinput"] }
tracing.workspace = true
tracy-client.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions = "1.4"
diff = "0.1"
